--- a/format.css
+++ b/format.css
@@ -6,13 +6,23 @@ body {
     background:  linear-gradient(90deg, yellow, green);
 }
 header {
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
     position: fixed;
-    height: 10%;
+    height: 13%;
     width: 100%;
     background-color: greenyellow;
-    padding-bottom: 3%;
+    
 }
-.szoveg {
+body .main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+#elso.szoveg {
     margin-top: 15%;
 }
 .slider-thumb::before {
@@ -22,7 +32,7 @@ header {
     top: 20%;
     width: 450px;
     height: 450px;
-    background: #ffffff;
+    background: #d0ff42;
     border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
     will-change: border-radius, transform, opacity;
     animation: sliderShape 5s linear infinite;
@@ -47,3 +57,11 @@ header {
       transform: translate3d(0,-3px,0) rotateZ(0.01deg);
     }
   }
+body {
+  font-family: "Noto Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
