--- a/format.css
+++ b/format.css
@@ -21,11 +21,13 @@ header h1 {
   align-self: center;
 }
 header h3 {
-  display: flex;
   width: 80%;
-  flex-wrap: wrap;
   margin: 0;
   text-align: center;
+}
+#overflowMessage {
+  color: red;
+  visibility: hidden;
 }
 body #main {
   margin-top: 15%;
@@ -139,7 +141,19 @@ body {
   margin-bottom: 5px;
   border-style: groove;
   border-color: black;
+  cursor: pointer;
 }
 .buttonContainer p:hover {
   background-color: grey;
+}
+#trash {
+  height: 90px;
+  width: 100px;
+  margin-top: 15%;
+  background-color: white;
+  border-style: groove;
+  border-color: black;
+}
+#reset {
+  width: 105px;
 }
